--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -2507,3 +2507,29 @@ a.disabled {
 {
     margin-bottom: 10px;
 }
+.imagePerformanceChangeNew img
+{
+    width: 100%;
+    height: 273px;
+}
+.editingProf
+{
+    display: none;
+    position: absolute;
+    font-size: 33px;
+    padding: 0;
+    right: 0;
+    color: #323232;
+    background: rgba(255, 255, 255, 0.5);
+    padding: 0px 7px 0 10px;
+    border-radius: 0 0 0 8px;
+    cursor: pointer;
+}
+.imagePerformanceChange {
+    width: 100%;
+    height: 100%;
+}
+.price-list .video iframe
+{
+    width: 100% !important;
+}
