--- a/web/css/style-retina.css
+++ b/web/css/style-retina.css
@@ -10361,11 +10361,7 @@ a.disabled {
 {
     display: none;
 }
-.price-list .video iframe
-{
-    width: 296px !important;
-    height: 205px !important;
-}
+
 .imagePerformanceChange
 {
     width: 296px;
@@ -10395,4 +10391,35 @@ a.disabled {
 .audioAddForm
 {
     margin-bottom: 10px;
+}
+.contact-details .form-group {
+    max-height: 77px;
+}
+.audioAddForm
+{
+    margin-bottom: 10px;
+}
+.imagePerformanceChangeNew img
+{
+    width: 100%;
+}
+.editingProf
+{
+    display: none;
+    position: absolute;
+    font-size: 33px;
+    padding: 0;
+    right: 0;
+    color: #323232;
+    background: rgba(255, 255, 255, 0.5);
+    padding: 0px 7px 0 10px;
+    border-radius: 0 0 0 8px;
+    cursor: pointer;
+}
+.imagePerformanceChange {
+    width: 100%;
+    height: 100%;
+}
+.price-list .video iframe {
+    width: 100% !important;
 }
