fixed multiple creating performances and modals

--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -2486,7 +2486,7 @@ a.disabled {
 }
 .navbar
 {
-    z-index: 999999;
+    z-index: 1000;
 }
 .results-content .slider
 {
@@ -2532,4 +2532,18 @@ a.disabled {
 .price-list .video iframe
 {
     width: 100% !important;
+}
+.price-list .info
+{
+    overflow: hidden;
+    word-wrap: normal;
+}
+.price-list .item .info p
+{
+    max-height: 196px;
+    overflow-y: auto;
+}
+.bx-wrapper .bx-controls-direction a
+{
+    z-index: 999;
 }
