--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -5,7 +5,7 @@
                 <article class="item clearfix">
                     <h2><span class="perfomanceTitleEdiatable" data-type="textarea" data-pk="{{ performance.id }}" data-title="">{{ performance.title }} </span>
                         <span class="price">Price: from {{ performance.offerMinPrice|number_format(2, '.', ',') }} EUR</span>
-                        <div class="deleteOffer"><button type="button" class="btn btn-danger"><i class="fa fa-trash"></i></button></div>
+                        <div class="deleteOffer"><button type="button" class="btn btn-danger" data-toggle="confirmation"><i class="fa fa-trash"></i></button></div>
                         <div class="editOffer"><button type="button" class="btn btn-info"><i class="fa fa-pencil-square-o"></i></button></div>
                     </h2>
                     <span class="performanceId hidden">{{ performance.id }}</span>
@@ -88,7 +88,7 @@
 
 
                     <div class="info">
-                        <p class="perfomanceInfoEdiatable" data-type="textarea" data-pk="{{ performance.id }}" data-title="">
+                        <p class="perfomanceInfoEdiatable" data-type="textarea" data-pk="{{ performance.id }}" maxlength="250" data-title="">
                             {{ performance.techRequirement }}
                         </p>
 
@@ -168,7 +168,7 @@
                 <article class="item clearfix addPerfomanceCreate emptyPerformance">
                     <h2><span class="perfomanceTitleEdiatable" data-type="textarea" data-pk="" data-title="">Your performance title</span>
                         <span class="price">Price: from EUR</span>
-                        <div class="deleteOffer"><button type="button" class="btn btn-danger"><i class="fa fa-trash"></i></button></div>
+                        <div class="deleteOffer"><button type="button" class="btn btn-danger" data-toggle="confirmation"><i class="fa fa-trash"></i></button></div>
                     </h2>
                     <span class="performanceId hidden"></span>
 
@@ -206,7 +206,7 @@
 
 
                     <div class="info">
-                        <p class="perfomanceInfoEdiatable" data-type="textarea" data-pk="" data-title="">
+                        <p class="perfomanceInfoEdiatable" data-type="textarea" maxlength="250" data-pk="" data-title="">
                             Your info text
                         </p>
 
