Thumbnails, small fixes

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
@@ -59,6 +59,7 @@
     <p class="copyright">
         © AKKROO MMXV MATICULOUSLY HAND CRAFTED IN ENGLAND 1.386.503 PIECES OF DATA CAPTURED AND CAUTING
     </p>
+        <div id="loadSpinner"></div>
 </footer>
 {% include 'ActedLegalDocsBundle:Default:registration.html.twig' %}
 <script src="{{ asset('js/javascript.js') }}"></script>
