--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -5,7 +5,7 @@
                 <article class="item clearfix">
                     <h2><span class="perfomanceTitleEdiatable" data-type="textarea" data-pk="{{ performance.id }}" data-title="">{{ performance.title }} </span>
                         <span class="price">Price: from {{ performance.offerMinPrice|number_format(2, '.', ',') }} EUR</span>
-                        <div class="deleteOffer"><button type="button" class="btn btn-danger" data-toggle="confirmation"><i class="fa fa-trash"></i></button></div>
+                        <div class="deleteOffer"><button type="button" class="btn btn-danger"><i class="fa fa-trash"></i></button></div>
                         <div class="editOffer"><button type="button" class="btn btn-info"><i class="fa fa-pencil-square-o"></i></button></div>
                     </h2>
                     <span class="performanceId hidden">{{ performance.id }}</span>
@@ -15,7 +15,7 @@
                                 <span class="hidden mediaId">{{ mediaOf.id }}</span>
                                 <i class="fa fa-picture-o editImageModalOpen" aria-hidden="true"></i>
                             </div>
-                            <img class="preview" src="{{ mediaOf.link }}" alt="Preview">
+                            <img class="preview" src="{{ asset(mediaOf.link)|imagine_filter('medium')}}" alt="Preview">
                         </div>
                         {% else %}
                             <div class="imagePerformanceChangeNew preview imageBlockWrapper">
@@ -55,7 +55,7 @@
                                     <iframe src="{{ mediaOf.link }}" width="395" height="274" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                                 </div>
                                 {% else %}
-                                <img class="preview" src="{{ mediaOf.link }}" alt="Preview">
+                                <img class="preview" src="{{ asset(mediaOf.link)|imagine_filter('medium')}}" alt="Preview">
                             {% endif %}
 
                         {% else %}
@@ -111,7 +111,7 @@
                     <h2>{{ performance.title }} <span class="price">Price: from {{ performance.offerMinPrice|number_format(2, '.', ',') }} EUR</span></h2>
 
                     {% for mediaOf in performance.media[0:1] %}
-                        <img class="preview" src="{{ mediaOf.link }}" alt="Preview">
+                        <img class="preview" src="{{ asset(mediaOf.link)|imagine_filter('medium')}}" alt="Preview">
                     {% else %}
                         <img class="preview" src="/assets/images/media-no-image.gif" alt="Preview">
                     {% endfor %}
@@ -128,7 +128,7 @@
                             {% if mediaOf.mediaType == "video" %}
                                 <iframe src="{{ mediaOf.link }}" width="395" height="274" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                             {% else %}
-                                <img class="preview" src="{{ mediaOf.link }}" alt="Preview">
+                                <img class="preview" src="{{ asset(mediaOf.link)|imagine_filter('medium')}}" alt="Preview">
                             {% endif %}
                         <!--<span class="glyphicon glyphicon-play"></span>
 
