--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -10,6 +10,7 @@
                     </h2>
                     <span class="performanceId hidden">{{ performance.id }}</span>
                     {% for mediaOf in performance.media[0:1] %}
+
                         <div class="imagePerformanceChangeNew preview imageBlockWrapper">
                             <div class="editing editingProf editImage">
                                 <span class="hidden mediaId">{{ mediaOf.id }}</span>
@@ -93,9 +94,9 @@
                         </p>
 
                         <div class="controls">
-                            <div class="button-gradient follow">
+                            <!--<div class="button-gradient follow">
                                 <button class="btn">REQUEST FREE QUOTE</button>
-                            </div>
+                            </div>-->
 
                             <p>
                                 <a href="#">Technical requirements</a>
@@ -111,6 +112,7 @@
                     <h2>{{ performance.title }} <span class="price">Price: from {{ performance.offerMinPrice|number_format(2, '.', ',') }} EUR</span></h2>
 
                     {% for mediaOf in performance.media[0:1] %}
+                        {#{{ dump(mediaOf) }}#}
                         <img class="preview" src="{{ asset(mediaOf.link)|imagine_filter('medium')}}" alt="Preview">
                     {% else %}
                         <img class="preview" src="/assets/images/media-no-image.gif" alt="Preview">
@@ -124,7 +126,7 @@
                         {{ dump(performance.media[1:2]) }}#}
 
                         {% for mediaOf in performance.media[1:2] %}
-
+                            {#{{ dump(mediaOf) }}#}
                             {% if mediaOf.mediaType == "video" %}
                                 <iframe src="{{ mediaOf.link }}" width="395" height="274" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                             {% else %}
@@ -211,9 +213,9 @@
                         </p>
 
                         <div class="controls">
-                            <div class="button-gradient follow">
+                            <!--<div class="button-gradient follow">
                                 <button class="btn">REQUEST FREE QUOTE</button>
-                            </div>
+                            </div>-->
 
                             <p>
                                 <a href="#">Technical requirements</a>
