--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -5,36 +5,36 @@
                 <article class="item clearfix">
                     <h2><span class="perfomanceTitleEdiatable" data-type="textarea" data-pk="{{ performance.id }}" data-title="">{{ performance.title }} </span>
                         <span class="price">Price: from {{ performance.offerMinPrice|number_format(2, '.', ',') }} EUR</span>
-                        <div class="deleteOffer"><button type="button" class="btn btn-danger"><i class="fa fa-trash"></i></button></div>
+                        <div class="deleteOffer"><button type="button" class="btn btn-danger" data-toggle="confirmation"
+                                                         data-btn-ok-label="Yes"
+                                                         data-btn-ok-icon="glyphicon glyphicon-share-alt"
+                                                         data-btn-ok-class="btn-success"
+                                                         data-btn-cancel-label="No"
+                                                         data-btn-cancel-icon="glyphicon glyphicon-ban-circle"
+                                                         data-btn-cancel-class="btn-danger"><i class="fa fa-trash"></i></button></div>
                         <div class="editOffer"><button type="button" class="btn btn-info"><i class="fa fa-pencil-square-o"></i></button></div>
                     </h2>
                     <span class="performanceId hidden">{{ performance.id }}</span>
-                    <div class="imagePerformanceChangeNew preview imageBlockWrapper">
-                    {% for mediaOf in performance.media|slice(0, 1) %}
-                    {% if mediaOf.position == 1 %}
-                        <div class="editing editingProf editImage">
-                            <span class="hidden mediaId">{{ mediaOf.id }}</span>
-                            <i class="fa fa-picture-o editImageModalOpen" aria-hidden="true"></i>
+                    {% for mediaOf in performance.media[0:1] %}
+                        <div class="imagePerformanceChangeNew preview imageBlockWrapper">
+                            <div class="editing editingProf editImage">
+                                <span class="hidden mediaId">{{ mediaOf.id }}</span>
+                                <i class="fa fa-picture-o editImageModalOpen" aria-hidden="true"></i>
+                            </div>
+                            <img class="preview" src="{{ asset(mediaOf.link)|imagine_filter('medium')}}" alt="Preview">
                         </div>
-                        <img class="preview" src="{{ asset(mediaOf.link)|imagine_filter('medium')}}" alt="Preview">
-                    {% else %}
-                        <div class="editing editingProf editImage">
-                            <span class="hidden mediaId">NewMedia</span>
-                            <i class="fa fa-picture-o editImageModalOpen" aria-hidden="true"></i></div>
-                        <img class="preview" src="/assets/images/media-no-image.gif" alt="Preview">
-                    {% endif %}
-                    {% else %}
-                        <div class="editing editingProf editImage">
-                            <span class="hidden mediaId">NewMedia</span>
-                            <i class="fa fa-picture-o editImageModalOpen" aria-hidden="true"></i></div>
-                        <img class="preview" src="/assets/images/media-no-image.gif" alt="Preview">
+                        {% else %}
+                        <div class="imagePerformanceChangeNew preview imageBlockWrapper">
+                            <div class="editing editingProf editImage">
+                                <span class="hidden mediaId">NewMedia</span>
+                                <i class="fa fa-picture-o editImageModalOpen" aria-hidden="true"></i></div>
+                            <img class="preview" src="/assets/images/media-no-image.gif" alt="Preview">
+                        </div>
+
                     {% endfor %}
-                    </div>
 
                     <div class="video imageBlockWrapper">
-                        {% for mediaOf in performance.media|slice(0, 1) %}
-
-                        {% if mediaOf.position == 2 %}
+                        {% for mediaOf in performance.media[1:2] %}
 
                             <div class="editing editingProf editImage">
                                 <span class="hidden mediaId">{{ mediaOf.id }}</span>
@@ -64,13 +64,16 @@
                                 <img class="preview" src="{{ asset(mediaOf.link)|imagine_filter('medium')}}" alt="Preview">
                             {% endif %}
 
-                        {% endif %}
                         {% else %}
-                            <div class="editing editingProf editImage">
+
+
+                            <div class="editing editingProf editImage newVideoImgAddBtns">
                                 <span class="hidden mediaId">NewMedia</span>
                                 <i class="fa fa-picture-o editImageModalOpen" aria-hidden="true"></i>
                                 <i class="fa fa-file-video-o editVideo" aria-hidden="true"></i>
                             </div>
+
+
                             <div class="imagePerformanceChange" id="image-performance-change2">
                                 <span class="hidden mediaId">NewMedia</span>
                                 <div class="performanceVideoAdd">
@@ -80,9 +83,11 @@
                                     </form>
                                     <button type="submit" id="AddPerformanceVideo" class="btn btn-default">Submit</button>
                                 </div>
+
                             </div>
                             <div class="performanceVideo">
                             </div>
+
                             <img class="preview" src="/assets/images/media-no-image.gif" alt="Preview">
                         {% endfor %}
                     </div>
@@ -94,9 +99,9 @@
                         </p>
 
                         <div class="controls">
-                            <!--<div class="button-gradient follow">
+                            <div class="button-gradient follow">
                                 <button class="btn">REQUEST FREE QUOTE</button>
-                            </div>-->
+                            </div>
 
                             <p>
                                 <a href="#">Technical requirements</a>
@@ -111,12 +116,8 @@
                 <article class="item clearfix">
                     <h2>{{ performance.title }} <span class="price">Price: from {{ performance.offerMinPrice|number_format(2, '.', ',') }} EUR</span></h2>
 
-                    {% for mediaOf in performance.media|slice(0, 1) %}
-                    {% if mediaOf.position == 1 %}
+                    {% for mediaOf in performance.media[0:1] %}
                         <img class="preview" src="{{ asset(mediaOf.link)|imagine_filter('medium')}}" alt="Preview">
-                    {% else %}
-                        <img class="preview" src="/assets/images/media-no-image.gif" alt="Preview">
-                    {% endif %}
                     {% else %}
                         <img class="preview" src="/assets/images/media-no-image.gif" alt="Preview">
                     {% endfor %}
@@ -128,23 +129,18 @@
                         {% endif %}
                         {{ dump(performance.media[1:2]) }}#}
 
-                        {% for mediaOf in performance.media|slice(0, 1) %}
-                        {% if mediaOf.position == 2 %}
+                        {% for mediaOf in performance.media[1:2] %}
 
                             {% if mediaOf.mediaType == "video" %}
                                 <iframe src="{{ mediaOf.link }}" width="395" height="274" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
                             {% else %}
                                 <img class="preview" src="{{ asset(mediaOf.link)|imagine_filter('medium')}}" alt="Preview">
                             {% endif %}
-
                         <!--<span class="glyphicon glyphicon-play"></span>
 
                             <div class="name">
                                 <div class="name-text">{{ mediaOf.name }}</div>
                             </div>-->
-                        {% else %}
-                            <img class="preview" src="/assets/images/media-no-image.gif" alt="Preview">
-                        {% endif %}
                         {% else %}
                             <img class="preview" src="/assets/images/media-no-image.gif" alt="Preview">
                         {% endfor %}
@@ -176,7 +172,7 @@
             {% if is_granted('EDIT', artist) %}
 
                 <article class="item clearfix addPerfomanceCreate emptyPerformance">
-                    <h2><span class="perfomanceTitleEdiatable" data-type="textarea" data-pk="" data-title="">Your performance title</span>
+                    <h2><span class="perfomanceTitleEdiatable" data-type="textarea" data-pk="" data-title="" data-placeholder="Your performance title"></span>
                         <span class="price">Price: from EUR</span>
                         <div class="deleteOffer"><button type="button" class="btn btn-danger" data-toggle="confirmation"><i class="fa fa-trash"></i></button></div>
                     </h2>
@@ -217,13 +213,12 @@
 
                     <div class="info">
                         <p class="perfomanceInfoEdiatable" data-type="textarea" maxlength="250" data-pk="" data-title="">
-                            Your info text
                         </p>
 
                         <div class="controls">
-                            <!--<div class="button-gradient follow">
+                            <div class="button-gradient follow">
                                 <button class="btn">REQUEST FREE QUOTE</button>
-                            </div>-->
+                            </div>
 
                             <p>
                                 <a href="#">Technical requirements</a>
