quotes request for speific performance and on search page

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
@@ -61,6 +61,7 @@
     </p>
         <div id="loadSpinner"></div>
 </footer>
+{% include 'ActedLegalDocsBundle:Default:quoteModal.html.twig' %}
 {% include 'ActedLegalDocsBundle:Default:registration.html.twig' %}
 <script src="{{ asset('js/javascript.js') }}"></script>
 </body>
