--- a/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
@@ -264,7 +264,7 @@
                                         </div>
 
                                         <div class="button-gradient blue ">
-                                            <button data-dismiss="modal" class="btn">Ask a free quote</button>
+                                            <button data-dismiss="modal" class="btn askQuoteFromSearch" value="{{ recomendedArtist.slug }}">Ask a free quote</button>
                                         </div>
                                     </div>
                                 </div>
