--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -155,7 +155,7 @@
 
                         <div class="controls">
                             <div class="button-gradient follow">
-                                <button class="btn">REQUEST FREE QUOTE</button>
+                                <button class="btn requestQuotePerformance" value="{{ performance.id }}">REQUEST FREE QUOTE</button>
                             </div>
 
                             <p>
