--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
@@ -88,7 +88,7 @@
             </div>
 
             <div class="button-gradient filled">
-                <button data-toggle="modal" data-target="#freeQuoteModal" class="btn quoteRequestProfile">REQUEST FREE QUOTE</button>
+                <button data-toggle="modal" class="btn quoteRequestProfile">REQUEST FREE QUOTE</button>
             </div>
             {% endif %}
         </div>
