--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
@@ -3,36 +3,12 @@
 
     <div class="container">
         <!-- THIS MENU VISIBLE ONLY ON DESCTIOP SCREEN-->
-        <ul class="categories-menu">
-            <li class="menu-block"><a href="/messages">Messages</a></li>
-            <li class="menu-block"><a href="/enquiries" class="active">Enquiries</a></li>
-            <li class="menu-block"><a href="/bookings">Bookings</a></li>
-            <li class="menu-block"><a href="/agenda">Agenda</a></li>
-            <li class="menu-block"><a href="/prices">Prices</a></li>
-            <li class="menu-block"><a href="/payment">Payment & Accounts</a></li>
-            <li class="menu-block"><a href="/reports">Reports</a></li>
-            <li class="menu-block"><a href="/feedbacks">Feedbacks</a></li>
-        </ul>
-
-        <!-- THIS DROPDOWN VISIBLE ONLY ON SM SCREEN-->
-        <div class="dropdown categories-dropdown hidden-lg hidden-md hidden-sm visible-xs">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Enquiries
-                <span class="caret"></span></button>
-            <ul class="dropdown-menu">
-                <li class="menu-block"><a href="/messages" class="active">Messages</a></li>
-                <li class="menu-block"><a href="/bookings">Bookings</a></li>
-                <li class="menu-block"><a href="/agenda">Agenda</a></li>
-                <li class="menu-block"><a href="/prices">Prices</a></li>
-                <li class="menu-block"><a href="/payment">Payment & Accounts</a></li>
-                <li class="menu-block"><a href="/reports">Reports</a></li>
-                <li class="menu-block"><a href="/feedbacks">Feedbacks</a></li>
-            </ul>
-        </div>
+        {% include 'ActedLegalDocsBundle:ChatRoom:dashboardmenu.html.twig' %}
 
         <div class="enquiries-wrap">
-            {% for chat in chats %}
+            {% for chat in chats|reverse %}
                 {{ dump(chat) }}
-            <article class="enq-block clearfix">
+            <article class="enq-block clearfix" id="{{ chat.id }}">
                 <span class="received-time">
                      <i class="enq-icon icon-timing"></i> Received 5 hours ago
                 </span>
@@ -58,7 +34,7 @@
 
                     <p class="act-request-message" data-max-chars-desktop="150" data-max-chars-mobile="70">
                         <span class="title">Message from client:</span>
-                        <span class="text">{{ chat.last_message.message_text }}</span>
+                        <span class="text">{{ chat.offer.comments }}</span>
                         <a class="show-more-btn" href="#">+more</a>
                     </p>
 
@@ -72,7 +48,7 @@
                         </div>
 
                         <div class="button-gradient">
-                            <button type="button" class="btn register">Not available</button>
+                            <button type="button" class="btn register rejectRequest">Not available</button>
                         </div>
                     </div>
 
