--- a/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
@@ -2761,3 +2761,13 @@ a.disabled {
     overflow: visible;
     background: rgba(0, 0, 0, 0.5) url("../assets/images/preloader.gif") no-repeat center center;
 }
+
+#photo-pager .scale-thumb img
+{
+    width: 100%;
+}
+
+.dangerMessage
+{
+    border-color: #ff735a;
+}
