--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/all_messages.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/all_messages.html.twig
@@ -6,22 +6,22 @@
         {% include 'ActedLegalDocsBundle:ChatRoom:dashboardmenu.html.twig' %}
 
         <div>
-            <select data-class="selections-white" name="event_type" id="event_type">
-                <option value="0">All messages</option>
-                <option value="1">Lorem Ipsum 1</option>
-                <option value="2">Lorem Ipsum 2</option>
+            <select data-class="selections-white" name="sortMessages" id="sortMessages">
+                <option value="all">All messages</option>
+                <option value="unread">Unread</option>
+                <option value="archived">Archived</option>
             </select>
 
 
             <div class="dialogs">
                 {% for message in messages|reverse %}
-                    {{ dump(message) }}
-                <article class="col-xs-12 dialog-section noselect" data-longtap-duration="500">
+                <article class="col-xs-12 dialog-section noselect" data-longtap-duration="500" id="{{ message.id }}">
                     <div class="wrap clearfix">
                         <div class="avatar">
-                            {% if message.sender_user[avatar] %}
+                            {% if message.sender_user.avatar is defined %}
                                 <img src="{{ message.sender_user.avatar }}" alt=""/>
                             {% else %}
+                                <img src="/assets/images/noAvatar.png" alt=""/>
                             {% endif %}
                         </div>
                         <div class="user-info">
@@ -30,7 +30,7 @@
                         </div>
                         <div class="message-block">
                             <div class="col-lg-10 col-sm-10 text-block">
-                                <p class="message-heading hidden-xs">Enquiry for a 4-piece Jazz Band / St Regis / 17 Dec 16</p>
+                                <p class="message-heading hidden-xs">Enquiry for {{ message.chat_room.event.title }} / {{ message.chat_room.event.city.name }} / {{ message.chat_room.event.starting_date }}</p>
 
                                 <div class="text">
                                     {{ message.message_text }}
@@ -44,17 +44,19 @@
                             </div>
                             <div class="col-lg-2 col-sm-2  message-controls no-pad">
                                 <ul class="ul-reset">
-                                    <li class="status confirmed"><i class="confirmed"></i> Confirmed</li>
-                                    <li class="archive hidden-xs"><a href="#"><i class="archive"></i> Archive</a></li>
-                                    <li class="delete hidden-xs"><a href="#"><i class="delete"></i> Delete</a></li>
+                                    <li class="status confirmed"><i class="confirmed"></i> {{ message.chat_room.offer.event_offer[0].status }}</li>
+                                    {% if message.archived == false %}
+                                    <li class="archive hidden-xs"><a class="archiveMessage"><i class="archive"></i> Archive</a></li>
+                                    {% endif %}
                                 </ul>
                             </div>
                         </div>
                     </div>
 
                     <ul class="clearfix message-controls controls-mobile ul-reset">
-                        <li class="archive"><a href="#"><i class="archive"></i> Archive</a></li>
-                        <li class="delete"><a href="#"><i class="delete"></i> Delete</a></li>
+                        {% if message.archived == false %}
+                            <li class="archive"><a class="archiveMessage"><i class="archive"></i> Archive</a></li>
+                        {% endif %}
                     </ul>
                 </article>
                 {% endfor %}
