--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
@@ -28,8 +28,11 @@
                 <div class="col-lg-9 act-request">
 
                     <p class="act-request-title">
-                        Act request: <span class="bold-title">5-piece Jazz band, Acrobats, Sports Act</span>
-                        <span class="see-more">(<a href="#">See more</a>)</span>
+                        Act request: <span class="bold-title">{% for chatOffer in chat.offer.performances %}
+                                {{ chatOffer.title }},
+                        {% endfor %}
+                        </span>
+                        <!--<span class="see-more">(<a href="#">See more</a>)</span>-->
                     </p>
 
                     <p class="act-request-message" data-max-chars-desktop="150" data-max-chars-mobile="70">
