--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -107,9 +107,9 @@
                     <li class="mail">
                         <!--For screens > 991px-->
                         <div class="hidden-sm hidden-xs badge">4</div>
-                        <a class="hidden-sm hidden-xs" href="#"><img src="{{ asset('assets/images/messages.png') }}" alt=""></a>
+                        <a class="hidden-sm hidden-xs" href="/dashboard/messages/{{ app.user.id }}"><img src="{{ asset('assets/images/messages.png') }}" alt=""></a>
                         <!--For screens < 991px-->
-                        <a class="hidden-md hidden-lg" href="#">Messages<span class="badge">13</span></a>
+                        <a class="hidden-md hidden-lg" href="/dashboard/messages/{{ app.user.id }}">Messages<span class="badge">13</span></a>
                     </li>
                     <li class="profile-dropdown dropdown hidden-sm">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
