--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
@@ -7,8 +7,7 @@
 
         <div class="enquiries-wrap">
             {% for chat in chats|reverse %}
-                {{ dump(chat) }}
-            <article class="enq-block clearfix" id="{{ chat.id }}">
+            <article class="enq-block clearfix" id="{{ chat.offer.id }}">
                 <span class="received-time">
                      <i class="enq-icon icon-timing"></i> Received 5 hours ago
                 </span>
